# gameverse-backend

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  jest.config.js  jest.integration.config.js  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  stryker.conf.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
app/: main.py
app/analytics/: __init__.py
app/api/: __init__.py  anomalies.py  budgets.py  costs.py  dashboard.py  forecasts.py  recommendations.py  resources.py
app/database/: __init__.py  memory_db.py
app/dev_portal/: database.py
app/fraud_ml/: __init__.py
app/models/: __init__.py  anomaly.py  budget.py  cost.py  forecast.py  recommendation.py  resource.py
app/services/: __init__.py  anomaly_service.py  budget_service.py  cost_service.py  forecast_service.py  recommendation_service.py  resource_service.py
infrastructure/database/: migrate.ts  reset.ts  seed.ts
migrations/: 1700000000000_initial-schema.sql
services/analytics-module/: eslint.config.js  jest.config.js  package-lock.json  (+2 more)
src/: app.ts  index.ts  server.test.ts  server.ts
tests/: __init__.py  conftest.py  setup.ts  test_analytics.py  test_anomaly_service.py  test_api.py  test_api_anomalies.py  test_api_budgets.py  test_api_costs.py  test_api_dashboard.py  test_api_forecasts.py  test_api_keys.py  test_api_recommendations.py  test_api_resources.py  test_auth.py  test_budget_service.py  test_cost_service.py  test_database.py  test_detectors.py  test_documentation.py  test_engagement.py  test_engine.py  test_events.py  test_experiments.py  test_flagging.py  test_forecast_service.py  test_funnels.py  test_main.py  test_models.py  test_players.py  test_predictive.py  test_rate_limiting.py  test_recommendation_service.py  test_resource_service.py  test_retention.py  test_sandbox.py  test_sdks.py  test_sessions.py  test_utils.py  test_visualization.py  (+1 more)
(+1108 files in other folders)
