[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.125.0"}
psycopg = {extras = ["binary"], version = "^3.3.2"}
numpy = "^2.3.5"
scikit-learn = "^1.8.0"
pydantic = "^2.12.5"
python-dateutil = "^2.9.0.post0"
aiosqlite = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.14.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
