[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.125.0"}
psycopg = {extras = ["binary"], version = "^3.3.2"}
pydantic = "^2.12.5"
scipy = "^1.16.3"
numpy = "^2.3.5"
pandas = "^2.3.3"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
